--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,8 +6,8 @@ description: A new Flutter project.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
+# A version number is three numbers separated by dots, like 1.0.0.
+# Followed by an optional build number separated by a +.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # In Android, build-name is used as versionName while build-number used as versionCode.
@@ -18,20 +18,22 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  google_fonts: ^5.1.0
+  provider: ^6.0.5
+  fl_chart: ^0.62.0
+  dotted_border: ^2.0.0+3
+  file_picker: ^5.3.1
+  flutter_animate: ^4.1.1+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-
-  google_fonts: ^6.2.1
-  flutter_svg: ^2.0.10
-  fl_chart: ^0.68.0
-  provider: ^6.1.2
+  cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
